# audio-fft-visualizer

./: CMakeLists.txt  README.md
res/shaders/: fragment_shader.fs  vertex_shader.vs
src/: main.cpp
src/audio/: audio_capture.cpp  audio_capture.hpp  ring_buffer.cpp  ring_buffer.hpp
src/core/: core.cpp  globals.hpp
src/core/manager/: window_manager.cpp  window_manager.hpp
src/render/: audio_visualizer.cpp  audio_visualizer.hpp
src/render/domain/: shader.cpp  shader.hpp
src/render/manager/: render_manager.cpp  render_manager.hpp
src/transform/: fast_fourier_transform.cpp  fast_fourier_transform.hpp
test/: test_fft.cpp
